--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -217,6 +217,30 @@
   urldate={2017-06-20}
 }
 
+@inproceedings{lee2016combining,
+  title={Combining word embedding and lexical database for semantic relatedness measurement},
+  author={Lee, Yang-Yin and Ke, Hao and Huang, Hen-Hsen and Chen, Hsin-Hsi},
+  booktitle={Proceedings of the 25th International Conference Companion on World Wide Web},
+  pages={73--74},
+  year={2016},
+  organization={International World Wide Web Conferences Steering Committee}
+}
+
+@inproceedings{schnabel2015evaluation,
+  title={Evaluation methods for unsupervised word embeddings.},
+  author={Schnabel, Tobias and Labutov, Igor and Mimno, David M and Joachims, Thorsten},
+  booktitle={EMNLP},
+  pages={298--307},
+  year={2015}
+}
+
+@article{mikolov2013efficient,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
