--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -241,6 +241,26 @@
   year={2013}
 }
 
+@article{huang2009using,
+  title={Using WordNet synonym substitution to enhance UMLS source integration},
+  author={Huang, Kuo-Chuan and Geller, James and Halper, Michael and Perl, Yehoshua and Xu, Junchuan},
+  journal={Artificial intelligence in medicine},
+  volume={46},
+  number={2},
+  pages={97--109},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@inproceedings{bird2006nltk,
+  title={NLTK: the natural language toolkit},
+  author={Bird, Steven},
+  booktitle={Proceedings of the COLING/ACL on Interactive presentation sessions},
+  pages={69--72},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
